--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,21 @@
     padding: 0;
     margin: 0;
 }
+body{
+    height: 100vh;
+    
+}
+main{
+    height: calc(100% - 0px);
+    background-color: aqua;
+    display: flex;
+}
 header{
-    background-color: crimson;
+    background-color: rgb(51, 94, 31);
+}
+.nav{
+    background: rgb(45, 74, 207);
+    height: 100%;
+    width: 10rem;
+    flex-direction: column;
 }
